--- a/Project_Code_5_BeingStylish.html
+++ b/Project_Code_5_BeingStylish.html
@@ -64,7 +64,7 @@
             <hr>
 		<ul data-bind="foreach: filteredList">
 			<li>
-				<span data-bind="text: title"> </span>
+				<span class="place" id="place" data-bind="text: title, click: bounce"> </span>
 			</li>
 		</ul>
 		
