--- a/Project_Code_5_BeingStylish.html
+++ b/Project_Code_5_BeingStylish.html
@@ -60,7 +60,7 @@
 			<h1>Find Your School In Hyderabad</h1>
 			<input data-bind="value: searchSchool">
 			 
-			<h1>Schools in Hyderabad </h1>
+			<h1>Results of Schools </h1>
 			<ul data-bind="foreach: searchSchools">
 				<li>
 					<span class="place" id="place" data-bind="text: title, click: bounce"> </span>
