--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				<h4>Results of Schools </h4>
 				<ul data-bind="foreach: searchSchools">
 					<li>
-						<span class="place" id="place" data-bind="text: title, click: bounce"> </span>
+						<span class="place" id="place" data-bind="text: title, click: Bounce"> </span>
 					</li>
 				</ul>
 			
