--- a/index.html
+++ b/index.html
@@ -3,78 +3,35 @@
   <head>
   <script src = "https://ajax.aspnetcdn.com/ajax/knockout/knockout-3.1.0.js" 
          type = "text/javascript"></script>
-		 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js"  type ="text/javascript"></script>
+		 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" type = "text/javascript" ></script>
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" type = "text/javascript">
+
 
   <script src="./application.js"> </script>
-    <style>
-      html,
-      body {
-        font-family: Arial, sans-serif;
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
-
-      .container {
-        height: 100%;
-        position: relative;
-      }
-
-      input {
-        font-size: 12px;
-      }
-
-      h1 {
-        color: #525454;
-        font-size: 22px;
-        margin: 0 0 10px 0;
-        text-align: center;
-      }
-
-      #hide-listings,
-      #show-listings {
-        width: 48%;
-      }
-
-      #map {
-        bottom:0px;
-        height: 100%;
-        left: 362px;
-        position: absolute;
-        right: 0px;
-      }
-
-      .options-box {
-        background: #fff;
-        border: 1px solid #999;
-        border-radius: 3px;
-        height: 100%;
-        line-height: 35px;
-        padding: 10px 10px 30px 10px;
-        text-align: left;
-        width: 340px;
-      }
-    </style>
+  <link rel="stylesheet" type="text/css" href="css/custom.css">
+    
   </head>
-  <body>
   
-    <div class="container">
+  
+  <body>
+		<div class="container">
 			<div class="options-box">
-			<h1>Find Your School In Hyderabad</h1>
+			<h1>Find Best School In Our Hyderabad</h1>
 				<input data-bind="value: searchSchool">
 			
 				 
-				<h4>Results of Schools </h4>
+				<h4>Search Results of Schools </h4>
 				<ul data-bind="foreach: searchSchools">
 					<li>
-						<span class="place" id="place" data-bind="text: title, click: Bounce"> </span>
+						<span data-bind="text: title, click: Bounce"> </span>
 					</li>
 				</ul>
 			
-			</div>
+		</div>
 		<div id="map"></div>
     </div>
 
