error handling errors

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
 		<div class="col-md-3">
 			<div class="row">
 				<div class="col-sm-12">
+					<h1>Hyderabad Schools</h1>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-12">
 			
 					<input data-bind="value: searchSchool" class="search-text-box">
 				</div>
@@ -76,7 +81,7 @@
 
 <script async defer
  src=
- "https://maps.googleapis.com/maps/api/js?key=AIzaSyDxjIKxD3TS0h5zOmv0srLyJ-LMtP-qZs4&v=3&callback=initMap">
+ "https://maps.googleapis.com/maps/api/js?key=AIzaSyDxjIKxD3TS0h5zOmv0srLyJ-LMtP-qZs4&v=3&callback=initMap" >
 </script>
 
 	
